--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
-        android:label="chat_app"
+        android:label="Free Gpt AI"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
