--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,22 @@ dependencies:
   share_plus: ^7.2.2
   cloud_firestore: ^4.15.9
   http: ^1.2.1
+  flutter_gemini: ^2.0.3
+  image_picker: ^1.0.7
+  dash_chat_2: ^0.0.20
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo_gemini.jpeg"
+
 
 
   flutter_lints: ^3.0.0
